<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.svobodapeter.ordecoffee.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/customer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:hint="@string/name"
            android:inputType="textMultiLine" />

        <TextView
            android:id="@+id/sortOfCoffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/customer_name"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/sortOfCoffee"
            android:textAllCaps="true" />

        <Spinner
            android:id="@+id/sortOfCoffeeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sortOfCoffee"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="72dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="16dp"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/toppingsCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sortOfCoffeeSpinner"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/extra"
            android:textAllCaps="true" />

        <Spinner
            android:id="@+id/topping1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toppingsCheck"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="72dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="16dp"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/topping2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/topping1"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="72dp"
            android:layout_marginStart="72dp"
            android:layout_marginTop="16dp"
            android:spinnerMode="dropdown" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/topping2"
            android:layout_margin="16dp"
            android:background="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/quantity"
            android:textAllCaps="true"
            android:textStyle="bold" />


        <RelativeLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/quantity"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonIncrement"
                android:layout_width="72dp"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:onClick="increment"
                android:text="+"
                android:textColor="@color/colorWhite"
                android:textSize="22dp" />

            <TextView
                android:id="@+id/quantityOfCoffees"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_toRightOf="@id/buttonIncrement"
                android:text="2"
                android:textColor="#000000"
                android:textSize="22dp" />

            <Button
                android:id="@+id/buttonDecrement"
                android:layout_width="72dp"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_toRightOf="@id/quantityOfCoffees"
                android:onClick="decrement"
                android:text="-"
                android:textColor="@color/colorWhite"
                android:textSize="22dp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearlayout"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/order_summary"
            android:textAllCaps="true"
            android:textStyle="bold" />


        -

        <LinearLayout
            android:id="@+id/order_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/price"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/order_summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/order_summary_text_view_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp" />

        </LinearLayout>

        <Button
            android:id="@+id/newOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_summary"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:onClick="new_Order"
            android:text="@string/new_order_button"
            android:textColor="@color/colorWhite"
            android:textSize="16dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/order_summary"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="48dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="8dp"
            android:onClick="submitOrder"
            android:text="@string/order_button"
            android:textColor="@color/colorWhite"
            android:textSize="16dp" />


        <ImageView
            android:id="@+id/img_under_new_order"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_below="@id/newOrder"
        android:scaleType="fitEnd"
        android:src="@drawable/caffee_bottom" />

        <ImageView
            android:id="@+id/img_under_button"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_below="@id/button"
            android:scaleType="fitEnd"
            android:src="@drawable/caffee_bottom" />

    </RelativeLayout>

</ScrollView>
